--- a/client/src/pages/link-statue/link-statue.html
+++ b/client/src/pages/link-statue/link-statue.html
@@ -4,6 +4,9 @@
         {{section.title_text}}
       </ion-title>
     <ion-buttons end>
+      <button style="background-color: transparent; float: left" icon-only ion-button (click)="shareStatue()">
+        <ion-icon name="share-alt" color="dark" style="color: #ffffff;"></ion-icon>
+      </button>
     <button style="background: transparent;" icon-only ion-button menuToggle>
       <ion-icon style="color: white;" name="menu"></ion-icon>
     </button>
@@ -25,7 +28,6 @@
     <ion-title>
       <ion-icon name="ios-bookmark-outline" color="dark" *ngIf="!section.bookmarked" (tap)="addToBookmark()"></ion-icon>
       <ion-icon name="ios-bookmark" color="dark" style="color:#454545;" *ngIf="section.bookmarked" (tap)="removeFromBookmark()"></ion-icon>
-      <ion-icon name="share-alt" color="dark" style="color:#454545;" (tap)="shareStatue()"></ion-icon>
     </ion-title>
   </ion-toolbar>
 </ion-footer>
