--- a/client/src/pages/statue/statue.html
+++ b/client/src/pages/statue/statue.html
@@ -4,8 +4,8 @@
       {{section.title_text}}
     </ion-title>
     <ion-buttons end>
-      <button style="background-color: transparent; float: left" icon-only ion-button>
-        <ion-icon name="share-alt" color="dark" style="color: #ffffff;" (tap)="shareStatue()"></ion-icon>
+      <button style="background-color: transparent; float: left" icon-only ion-button (click)="shareStatue()">
+        <ion-icon name="share-alt" color="dark" style="color: #ffffff;"></ion-icon>
       </button>
       <button style="background: transparent;" icon-only ion-button menuToggle>
         <ion-icon style="color: white;" name="menu"></ion-icon>
