--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -18,11 +18,11 @@
   </ion-row>
 
   <ion-row> 
-    <ion-col>
-      <ion-item style="background: transparent; border-bottom-color: white">
+    <ion-col style="margin-left: 5%; margin-right: 5%">
+      <ion-item id="home-search" style="background: transparent; border-bottom-color: white">
         <ion-label style="color: white;" floating>Search</ion-label>
         <ion-input class="search" style="color: white; border-bottom-color: white" type="search" (change)="goToSearch($event)" [(ngModel)]="searchQuery" (ionCancel)="onCancel($event)"></ion-input>
-        <ion-icon class="input-icons" style="color: white; margin-bottom: -5%;" item-end name="md-search"></ion-icon>
+        <ion-icon class="input-icons" style="color: white; margin-bottom: -5%; font-size: 2.6rem; float:right;" item-end name="md-search"></ion-icon>
       </ion-item>
     </ion-col>
   </ion-row>
@@ -32,7 +32,7 @@
     <div style="text-align: center">
   <ion-row> 
     <ion-col>
-      <ion-item style="background: transparent;" on-click="goToDivision()">
+      <ion-item id="home-option" style="background: transparent;" on-click="goToDivision()">
         <ion-row>
           <ion-col col-1 text-center>
             <ion-icon class="input-icons" style="color: white;" name="md-folder"></ion-icon>
@@ -50,7 +50,7 @@
 
   <ion-row> 
     <ion-col>
-      <ion-item style="background: transparent;" on-click="goToCamera()">
+      <ion-item id="home-option" style="background: transparent;" on-click="goToCamera()">
         <ion-row>
           <ion-col col-1 text-center>
             <ion-icon class="input-icons" style="color: white;" name="md-camera"></ion-icon>
@@ -70,7 +70,7 @@
 
   <ion-row> 
     <ion-col>
-      <ion-item style="background: transparent;" on-click="goToLocation()">
+      <ion-item id="home-option" style="background: transparent;" on-click="goToLocation()">
         <ion-row>
           <ion-col col-1 text-center>
             <ion-icon class="input-icons" style="color: white;" name="md-pin"></ion-icon>
