--- a/client/src/pages/location/location.html
+++ b/client/src/pages/location/location.html
@@ -18,7 +18,10 @@
       <ion-item *ngFor="let sec of sections;let idx=index;" color="none" id="section-list-item26"
                 attr.id={{sec._id}} (tap)="openSection(sec.statute)">
         <ion-row>
-          <ion-col col-11 class="section_text">
+          <ion-col col-1>
+            {{sec.distance}} km
+          </ion-col>
+          <ion-col col-0 class="section_text">
             &#167;{{sec.statute.chapter}}-{{sec.statute.section}}&nbsp;{{sec.statute.section_text}}
           </ion-col>
           <ion-col col-1>
